--- a/Weekly Digest - Member.html
+++ b/Weekly Digest - Member.html
@@ -981,7 +981,7 @@
 																				<span
 																					style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">You
 																					earned <strong>${{{earnings}}}</strong> this week.<br>
-																					That is a <strong>{{{earningsPercentage}}}%</strong> change from last
+																					That is a <strong>{{{earningsChange}}}%</strong> change from last
 																					week.&nbsp;</span>
 																			</td>
 																		</tr>
@@ -1204,7 +1204,7 @@
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Contact Support" href="{{{contactSupportUrl}}}"
 																	target="_blank"
-																	style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 18px;">Contact
+																	style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px; height: 50px;">Contact
 																	Support</a>
 															</td>
 														</tr>
