--- a/Invite - Staff.html
+++ b/Invite - Staff.html
@@ -976,7 +976,7 @@
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Complete Account Set-Up" href="{{{inviteUrl}}}"
 																	target="_blank"
-																	style="font-weight: bold; padding: 18px;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Complete
+																	style="font-weight: bold; padding: 0px 18px; height: 50px;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Complete
 																	Account Set-Up</a>
 															</td>
 														</tr>
