--- a/Reservation Reminder.html
+++ b/Reservation Reminder.html
@@ -927,12 +927,13 @@
 																<h1 class="null"><span
 																		style="font-family:noticia text,georgia,times new roman,serif"><span
 																			style="font-size:24px"><strong><span style="color:#3a7c7c">You Have an Upcoming
+																					Item
 																					Reservation</span></strong></span></span></h1>
 
 																<p
 																	style="color: #324047;font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;font-size: 14px;line-height: 125%;">
 																	<span style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Hello
-																		{{{firstName}}}, you have booked a reservation for {{{roomName}}}&nbsp;on {{{date}}}
+																		{{{firstName}}}, you have reserved an item for {{{itemName}}}&nbsp;on {{{date}}}
 																		at {{{time}}}. If you need to reschedule or cancel, let us know!</span>
 																</p>
 
@@ -966,7 +967,7 @@
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Reservation Details" href="{{{verifyEmailUrl}}}"
 																	target="_blank"
-																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 18px;">Reservation
+																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px; height: 50px;">Reservation
 																	Details</a>
 															</td>
 														</tr>
