--- a/Reset Password.html
+++ b/Reset Password.html
@@ -1009,7 +1009,7 @@
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Reset Password" href="{{{resetPasswordUrl}}}"
 																	target="_blank"
-																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 18px;">Reset
+																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px; height: 50px;">Reset
 																	Password</a>
 															</td>
 														</tr>
