--- a/Subscription Expired.html
+++ b/Subscription Expired.html
@@ -966,7 +966,7 @@
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Update Payment Information" href="{{{updatePaymentUrl}}}"
 																	target="_blank"
-																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 18px;">Update
+																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px; height: 50px;">Update
 																	Payment Information</a>
 															</td>
 														</tr>
