--- a/Template.html
+++ b/Template.html
@@ -964,7 +964,7 @@
 															<td align="center" valign="middle" class="mcnButtonContent"
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Button" href="http://{{{verifyEmailUrl}}}" target="_blank"
-																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 18px;">Button</a>
+																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px; height: 50px;">Button</a>
 															</td>
 														</tr>
 													</tbody>
