--- a/Verify Email.html
+++ b/Verify Email.html
@@ -965,7 +965,7 @@
 															<td align="center" valign="middle" class="mcnButtonContent"
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Verify Email" href="{{{verifyEmailUrl}}}" target="_blank"
-																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 18px;">Verify
+																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px; height: 50px;">Verify
 																	Email</a>
 															</td>
 														</tr>
