--- a/Weekly Digest - Space Owner.html
+++ b/Weekly Digest - Space Owner.html
@@ -1117,7 +1117,7 @@
 																										style="font-size:24px">&nbsp;</span></font>
 																							</strong></span><br>
 																						<span
-																							style="color:{{{activeMembersCountChange}}}">{{{activeMembersCountChange}}}%</span><br>
+																							style="color:{{{activeMembersCountChangeColor}}}">{{{activeMembersCountChange}}}%</span><br>
 																						<font face="open sans, helvetica neue, helvetica, arial, sans-serif">
 																							Active<br>
 																							Members</font>
@@ -1205,7 +1205,7 @@
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Contact Support" href="{{{contactSupportUrl}}}"
 																	target="_blank"
-																	style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 18px;">Contact
+																	style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px; height: 50px;">Contact
 																	Support</a>
 															</td>
 														</tr>
