updated wellneest -> cowello

--- a/Welcome - Space Owner.html
+++ b/Welcome - Space Owner.html
@@ -1381,7 +1381,7 @@
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Schedule Call" href="{{{scheduleCallLink}}}"
 																	target="_blank"
-																	style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px; height: 50px;">Schedule
+																	style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px;">Schedule
 																	Call</a>
 															</td>
 														</tr>
