--- a/Appointment Reminder.html
+++ b/Appointment Reminder.html
@@ -966,7 +966,7 @@
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Appointment Details" href="http://{{{verifyEmailUrl}}}"
 																	target="_blank"
-																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;padding: 18px;">Appointment
+																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;padding: 18px; height: 50px;">Appointment
 																	Details</a>
 															</td>
 														</tr>
