--- a/Verify Email.html
+++ b/Verify Email.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"
-	xmlns:o="urn:schemas-microsoft-com:office:office">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 	<!-- NAME: 1 COLUMN -->
@@ -853,7 +852,7 @@
                         <tr>
                         <td align="center" valign="top" width="600" style="width:600px;">
                         <![endif]-->
-					<table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px !important">
+					<table border="0" cellpadding="0" cellspacing="0" width="100%" style="width: 600px !important">
 						<tr>
 							<td valign="top" id="templatePreheader"></td>
 						</tr>
@@ -922,7 +921,7 @@
 															<td valign="top" class="mcnTextContent"
 																style="padding: 0px 18px 9px;color: #324047;font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;font-size: 14px;line-height: 125%;">
 
-																<h1 class="null" style="text-align: left;">&nbsp;</h1>
+																<h1 class="null" style="text-align: left;"> </h1>
 
 																<h1 class="null"><span
 																		style="font-family:noticia text,georgia,times new roman,serif"><span
@@ -932,8 +931,8 @@
 																<p
 																	style="color: #324047;font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;font-size: 14px;line-height: 125%;">
 																	<span style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Verify
-																		that you would like to use this email address for your Wellnest account by clicking
-																		the button below.&nbsp;</span>
+																		that you would like to use this email address for your CoWello account by clicking
+																		the button below. </span>
 																</p>
 
 															</td>
@@ -965,7 +964,7 @@
 															<td align="center" valign="middle" class="mcnButtonContent"
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Verify Email" href="{{{verifyEmailUrl}}}" target="_blank"
-																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px; height: 50px;">Verify
+																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 18px;">Verify
 																	Email</a>
 															</td>
 														</tr>
@@ -997,7 +996,7 @@
 																style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
 																<br>
-																&nbsp;
+
 															</td>
 														</tr>
 													</tbody>
@@ -1041,7 +1040,7 @@
 
 																<span style="font-size:12px"><span
 																		style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Trouble
-																		viewing this email?&nbsp;&nbsp;<a href="*|ARCHIVE|*" target="_blank">View it in your
+																		viewing this email? <a href="*|ARCHIVE|*" target="_blank">View it in your
 																			browser</a></span></span>
 															</td>
 														</tr>
@@ -1303,7 +1302,7 @@
 			</tr>
 		</table>
 	</center>
-	<script type="text/javascript" src="/n9_stO/ZDiI/D7g/-sp/tSbePquQAyQ/OuuakrzwiE/L15cAQ/ZU/sjcUALGyk"></script>
+
 </body>
 
 </html>
