--- a/Invite.html
+++ b/Invite.html
@@ -934,7 +934,7 @@
 																	<span style="font-size:14px"><strong>{{{spaceOwnerName}}}</strong> has invited you to
 																		join <strong>{{{locationName}}}</strong> as a member.<br data-text="true">
 																		<br>
-																		{{{locationName}}} uses Cowello, a business and client management tool to help you
+																		{{{locationName}}} uses CoWello, a business and client management tool to help you
 																		run your business in their space. Please click below to review the terms and
 																		conditions and to set up your account.</span>
 																</p>
