--- a/Invite - Staff.html
+++ b/Invite - Staff.html
@@ -941,7 +941,7 @@
 																	<span style="font-size:14px"><strong>{{{spaceOwnerName}}}</strong> has invited you to
 																		join their team.<br data-text="true">
 																		<br>
-																		{{{spaceOwnerName}}} uses Cowello, a business and client management tool to help
+																		{{{spaceOwnerName}}} uses CoWello, a business and client management tool to help
 																		manage their space. Please click below to review the terms and conditions and to set
 																		up your account.</span>
 																</p>
