--- a/Invite.html
+++ b/Invite.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"
-	xmlns:o="urn:schemas-microsoft-com:office:office">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 	<!-- NAME: 1 COLUMN -->
@@ -853,7 +852,7 @@
                         <tr>
                         <td align="center" valign="top" width="600" style="width:600px;">
                         <![endif]-->
-					<table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px !important">
+					<table border="0" cellpadding="0" cellspacing="0" width="100%" style="width: 600px !important">
 						<tr>
 							<td valign="top" id="templatePreheader"></td>
 						</tr>
@@ -869,13 +868,12 @@
 							padding-top: 10px;
 							padding-bottom: 10px;
 						">
-								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnImageBlock"
-									style="min-width:100%;">
+								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnImageBlock" style="min-width:100%;">
 									<tbody class="mcnImageBlockOuter">
 										<tr>
 											<td valign="top" style="padding:9px" class="mcnImageBlockInner">
-												<table align="left" width="100%" border="0" cellpadding="0" cellspacing="0"
-													class="mcnImageContentContainer" style="min-width:100%;">
+												<table align="left" width="100%" border="0" cellpadding="0" cellspacing="0" class="mcnImageContentContainer"
+													style="min-width:100%;">
 													<tbody>
 														<tr>
 															<td class="mcnImageContent" valign="top"
@@ -901,8 +899,7 @@
 						</tr>
 						<tr>
 							<td valign="top" id="templateBody">
-								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock"
-									style="min-width:100%;">
+								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock" style="min-width:100%;">
 									<tbody class="mcnTextBlockOuter">
 										<tr>
 											<td valign="top" class="mcnTextBlockInner" style="padding-top:9px;">
@@ -914,20 +911,19 @@
 												<!--[if mso]>
 				<td valign="top" width="600" style="width:600px;">
 				<![endif]-->
-												<table align="left" border="0" cellpadding="0" cellspacing="0"
-													style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
+												<table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%"
+													class="mcnTextContentContainer">
 													<tbody>
 														<tr>
 
 															<td valign="top" class="mcnTextContent"
 																style="padding: 0px 18px 9px;color: #324047;font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;font-size: 14px;line-height: 125%;">
 
-																<h1 class="null" style="text-align: left;">&nbsp;</h1>
+																<h1 class="null" style="text-align: left;"> </h1>
 
-																<h1 class="null"><span
-																		style="font-family:noticia text,georgia,times new roman,serif"><span
+																<h1 class="null"><span style="font-family:noticia text,georgia,times new roman,serif"><span
 																			style="font-size:24px"><strong><span style="color:#3a7c7c">You've been invited to
-																					join&nbsp;</span></strong></span></span></h1>
+																					join </span></strong></span></span></h1>
 
 																<p
 																	style="color: #324047;font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;font-size: 14px;line-height: 125%;">
@@ -955,12 +951,11 @@
 										</tr>
 									</tbody>
 								</table>
-								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnButtonBlock"
-									style="min-width:100%;">
+								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnButtonBlock" style="min-width:100%;">
 									<tbody class="mcnButtonBlockOuter">
 										<tr>
-											<td style="padding-top:0; padding-right:18px; padding-bottom:18px; padding-left:18px;"
-												valign="top" align="left" class="mcnButtonBlockInner">
+											<td style="padding-top:0; padding-right:18px; padding-bottom:18px; padding-left:18px;" valign="top" align="left"
+												class="mcnButtonBlockInner">
 												<table border="0" cellpadding="0" cellspacing="0" class="mcnButtonContentContainer"
 													style="border-collapse: separate !important;border-radius: 3px;background-color: #3A7C7C;">
 													<tbody>
@@ -968,7 +963,7 @@
 															<td align="center" valign="middle" class="mcnButtonContent"
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
 																<a class="mcnButton " title="Join" href="{{{inviteUrl}}}" target="_blank"
-																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px; height: 50px;">Join</a>
+																	style="font-weight: bold;letter-spacing: 0px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 18px;">Join</a>
 															</td>
 														</tr>
 													</tbody>
@@ -977,8 +972,7 @@
 										</tr>
 									</tbody>
 								</table>
-								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock"
-									style="min-width:100%;">
+								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock" style="min-width:100%;">
 									<tbody class="mcnTextBlockOuter">
 										<tr>
 											<td valign="top" class="mcnTextBlockInner" style="padding-top:9px;">
@@ -990,8 +984,8 @@
 												<!--[if mso]>
 				<td valign="top" width="600" style="width:600px;">
 				<![endif]-->
-												<table align="left" border="0" cellpadding="0" cellspacing="0"
-													style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
+												<table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%"
+													class="mcnTextContentContainer">
 													<tbody>
 														<tr>
 
@@ -1016,8 +1010,7 @@
 										</tr>
 									</tbody>
 								</table>
-								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock"
-									style="min-width:100%;">
+								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock" style="min-width:100%;">
 									<tbody class="mcnTextBlockOuter">
 										<tr>
 											<td valign="top" class="mcnTextBlockInner" style="padding-top:9px;">
@@ -1029,8 +1022,8 @@
 												<!--[if mso]>
 				<td valign="top" width="600" style="width:600px;">
 				<![endif]-->
-												<table align="left" border="0" cellpadding="0" cellspacing="0"
-													style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
+												<table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%"
+													class="mcnTextContentContainer">
 													<tbody>
 														<tr>
 
@@ -1038,7 +1031,7 @@
 																style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
 																<br>
-																&nbsp;
+																
 															</td>
 														</tr>
 													</tbody>
@@ -1059,8 +1052,7 @@
 						</tr>
 						<tr>
 							<td valign="top" id="templateFooter">
-								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnFollowBlock"
-									style="min-width:100%;">
+								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnFollowBlock" style="min-width:100%;">
 									<tbody class="mcnFollowBlockOuter">
 										<tr>
 											<td align="center" valign="top" style="padding:9px" class="mcnFollowBlockInner">
@@ -1069,12 +1061,10 @@
 													<tbody>
 														<tr>
 															<td align="center" style="padding-left:9px;padding-right:9px;">
-																<table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width:100%;"
-																	class="mcnFollowContent">
+																<table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width:100%;" class="mcnFollowContent">
 																	<tbody>
 																		<tr>
-																			<td align="center" valign="top"
-																				style="padding-top:9px; padding-right:9px; padding-left:9px;">
+																			<td align="center" valign="top" style="padding-top:9px; padding-right:9px; padding-left:9px;">
 																				<table align="center" border="0" cellpadding="0" cellspacing="0">
 																					<tbody>
 																						<tr>
@@ -1089,30 +1079,22 @@
                                         <![endif]-->
 
 
-																								<table align="left" border="0" cellpadding="0" cellspacing="0"
-																									style="display:inline;">
+																								<table align="left" border="0" cellpadding="0" cellspacing="0" style="display:inline;">
 																									<tbody>
 																										<tr>
-																											<td valign="top" style="padding-right:10px; padding-bottom:9px;"
-																												class="mcnFollowContentItemContainer">
-																												<table border="0" cellpadding="0" cellspacing="0" width="100%"
-																													class="mcnFollowContentItem">
+																											<td valign="top" style="padding-right:10px; padding-bottom:9px;" class="mcnFollowContentItemContainer">
+																												<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnFollowContentItem">
 																													<tbody>
 																														<tr>
-																															<td align="left" valign="middle"
-																																style="padding-top:5px; padding-right:10px; padding-bottom:5px; padding-left:9px;">
-																																<table align="left" border="0" cellpadding="0"
-																																	cellspacing="0" width="">
+																															<td align="left" valign="middle" style="padding-top:5px; padding-right:10px; padding-bottom:5px; padding-left:9px;">
+																																<table align="left" border="0" cellpadding="0" cellspacing="0" width="">
 																																	<tbody>
 																																		<tr>
 
-																																			<td align="center" valign="middle" width="24"
-																																				class="mcnFollowIconContent">
-																																				<a href="https://twitter.com/co_wello"
-																																					target="_blank"><img
-																																						src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-twitter-48.png"
-																																						alt="Twitter" style="display:block;"
-																																						height="24" width="24" class=""></a>
+																																			<td align="center" valign="middle" width="24" class="mcnFollowIconContent">
+																																				<a href="https://twitter.com/co_wello" target="_blank"><img
+																																						src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-twitter-48.png" alt="Twitter"
+																																						style="display:block;" height="24" width="24" class=""></a>
 																																			</td>
 
 
@@ -1137,30 +1119,22 @@
                                         <![endif]-->
 
 
-																								<table align="left" border="0" cellpadding="0" cellspacing="0"
-																									style="display:inline;">
+																								<table align="left" border="0" cellpadding="0" cellspacing="0" style="display:inline;">
 																									<tbody>
 																										<tr>
-																											<td valign="top" style="padding-right:10px; padding-bottom:9px;"
-																												class="mcnFollowContentItemContainer">
-																												<table border="0" cellpadding="0" cellspacing="0" width="100%"
-																													class="mcnFollowContentItem">
+																											<td valign="top" style="padding-right:10px; padding-bottom:9px;" class="mcnFollowContentItemContainer">
+																												<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnFollowContentItem">
 																													<tbody>
 																														<tr>
-																															<td align="left" valign="middle"
-																																style="padding-top:5px; padding-right:10px; padding-bottom:5px; padding-left:9px;">
-																																<table align="left" border="0" cellpadding="0"
-																																	cellspacing="0" width="">
+																															<td align="left" valign="middle" style="padding-top:5px; padding-right:10px; padding-bottom:5px; padding-left:9px;">
+																																<table align="left" border="0" cellpadding="0" cellspacing="0" width="">
 																																	<tbody>
 																																		<tr>
 
-																																			<td align="center" valign="middle" width="24"
-																																				class="mcnFollowIconContent">
-																																				<a href="https://www.facebook.com/co_wello/"
-																																					target="_blank"><img
-																																						src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-facebook-48.png"
-																																						alt="Facebook" style="display:block;"
-																																						height="24" width="24" class=""></a>
+																																			<td align="center" valign="middle" width="24" class="mcnFollowIconContent">
+																																				<a href="https://www.facebook.com/co_wello/" target="_blank"><img
+																																						src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-facebook-48.png" alt="Facebook"
+																																						style="display:block;" height="24" width="24" class=""></a>
 																																			</td>
 
 
@@ -1185,30 +1159,22 @@
                                         <![endif]-->
 
 
-																								<table align="left" border="0" cellpadding="0" cellspacing="0"
-																									style="display:inline;">
+																								<table align="left" border="0" cellpadding="0" cellspacing="0" style="display:inline;">
 																									<tbody>
 																										<tr>
-																											<td valign="top" style="padding-right:0; padding-bottom:9px;"
-																												class="mcnFollowContentItemContainer">
-																												<table border="0" cellpadding="0" cellspacing="0" width="100%"
-																													class="mcnFollowContentItem">
+																											<td valign="top" style="padding-right:0; padding-bottom:9px;" class="mcnFollowContentItemContainer">
+																												<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnFollowContentItem">
 																													<tbody>
 																														<tr>
-																															<td align="left" valign="middle"
-																																style="padding-top:5px; padding-right:10px; padding-bottom:5px; padding-left:9px;">
-																																<table align="left" border="0" cellpadding="0"
-																																	cellspacing="0" width="">
+																															<td align="left" valign="middle" style="padding-top:5px; padding-right:10px; padding-bottom:5px; padding-left:9px;">
+																																<table align="left" border="0" cellpadding="0" cellspacing="0" width="">
 																																	<tbody>
 																																		<tr>
 
-																																			<td align="center" valign="middle" width="24"
-																																				class="mcnFollowIconContent">
-																																				<a href="https://www.linkedin.com/company/cowello/about/"
-																																					target="_blank"><img
-																																						src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-linkedin-48.png"
-																																						alt="LinkedIn" style="display:block;"
-																																						height="24" width="24" class=""></a>
+																																			<td align="center" valign="middle" width="24" class="mcnFollowIconContent">
+																																				<a href="https://www.linkedin.com/company/cowello/about/" target="_blank"><img
+																																						src="https://cdn-images.mailchimp.com/icons/social-block-v2/dark-linkedin-48.png" alt="LinkedIn"
+																																						style="display:block;" height="24" width="24" class=""></a>
 																																			</td>
 
 
@@ -1249,8 +1215,7 @@
 										</tr>
 									</tbody>
 								</table>
-								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock"
-									style="min-width:100%;">
+								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock" style="min-width:100%;">
 									<tbody class="mcnTextBlockOuter">
 										<tr>
 											<td valign="top" class="mcnTextBlockInner" style="padding-top:9px;">
@@ -1262,16 +1227,16 @@
 												<!--[if mso]>
 				<td valign="top" width="600" style="width:600px;">
 				<![endif]-->
-												<table align="left" border="0" cellpadding="0" cellspacing="0"
-													style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
+												<table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%"
+													class="mcnTextContentContainer">
 													<tbody>
 														<tr>
 
 															<td valign="top" class="mcnTextContent"
 																style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
-																<span style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif"><span
-																		style="font-size:12px">Want to change how you receive these emails?<br>
+																<span style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif"><span style="font-size:12px">Want to
+																		change how you receive these emails?<br>
 																		You can <a href="http://{{{unsubscribe_preferences}}}" target="_blank">update your
 																			preferences</a> or <a href="http://{{{unsubscribe}}}" target="_blank">unsubscribe
 																			from this list</a>.</span></span>
@@ -1304,7 +1269,7 @@
 			</tr>
 		</table>
 	</center>
-	<script type="text/javascript" src="/n9_stO/ZDiI/D7g/-sp/tSbePquQAyQ/OuuakrzwiE/L15cAQ/ZU/sjcUALGyk"></script>
+	
 </body>
 
 </html>
