--- a/Welcome - Space Owner.html
+++ b/Welcome - Space Owner.html
@@ -984,31 +984,7 @@
 				<tr>
 				<![endif]-->
 
-												<!--[if mso]>
-				<td valign="top" width="600" style="width:600px;">
-				<![endif]-->
-												<table align="left" border="0" cellpadding="0" cellspacing="0"
-													style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
-													<tbody>
-														<tr>
-
-															<td valign="top" class="mcnTextContent"
-																style="padding: 0px 18px 9px;color: #333333;font-family: Roboto, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;font-size: 16px;line-height: 125%;">
-
-																<h3 class="null" style="text-align: center;"><span
-																		style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif"><span
-																			style="color:#FFFFFF"><span style="font-size:14px">You are now a part of the
-																				CoWello community where space owners like you can manage your
-																				space.</span></span><br>
-																		&nbsp;</span></h3>
-
-															</td>
-														</tr>
-													</tbody>
-												</table>
-												<!--[if mso]>
-				</td>
-				<![endif]-->
+											
 
 												<!--[if mso]>
 				</tr>
@@ -1045,143 +1021,92 @@
 										</tr>
 									</tbody>
 								</table>
-								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnCaptionBlock">
-									<tbody class="mcnCaptionBlockOuter">
+								<table style="margin: 20px;">
+									<tbody>
 										<tr>
-											<td class="mcnCaptionBlockInner" valign="top" style="padding:9px;">
+											<td>
+											
+												<h2>Get Paid Quickly</h2>
+											</td>
+											</tr>
+											<tr>
+											<td>
+												<p>Connect your Stripe account to receive payments from your members for room reservations, equipment rentals, and
+													membership fees. Complete a one-time, simple set up to enable streamlined reservation requests with automated
+													billing
+													collection.
+												</p>
+											</td>
+											</tr>
+											</tbody>
+											</table>
+								<table style="margin: 20px;">
+									<tbody>
+										<tr>
+											<td>
 
-
-
-
-												<table border="0" cellpadding="0" cellspacing="0" class="mcnCaptionRightContentOuter"
-													width="100%">
-													<tbody>
-														<tr>
-															<td valign="top" class="mcnCaptionRightContentInner" style="padding:0 9px ;">
-																<table align="left" border="0" cellpadding="0" cellspacing="0"
-																	class="mcnCaptionRightImageContentContainer" width="264">
-																	<tbody>
-																		<tr>
-																			<td class="mcnCaptionRightImageContent" align="center" valign="top">
-
-
-
-																				<img alt=""
-																					src="https://mcusercontent.com/994f27fb5d69067ff07b3b43d/images/0a3909bc-56a3-0783-65b7-2d5e19bb4ac5.jpg"
-																					width="264" style="max-width:2581px;" class="mcnImage">
-
-
-
-																			</td>
-																		</tr>
-																	</tbody>
-																</table>
-																<table class="mcnCaptionRightTextContentContainer" align="right" border="0"
-																	cellpadding="0" cellspacing="0" width="264">
-																	<tbody>
-																		<tr>
-																			<td valign="top" class="mcnTextContent">
-																				<br>
-																				<span style="font-size:18px"><span style="color:#3a7c7c"><span
-																							style="font-family:noticia text,georgia,times new roman,serif">Cool
-																							Features</span></span></span>
-
-																				<ul>
-																					<li><span style="color:#324047"><span style="font-size:14px"><span
-																									style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Manage
-																									Members and Bookings</span></span></span></li>
-																					<li><span style="color:#324047"><span style="font-size:14px"><span
-																									style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Manage
-																									Clients and Appointments</span></span></span></li>
-																					<li><span style="color:#324047"><span style="font-size:14px"><span
-																									style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Billing
-																									and Invoicing</span></span></span></li>
-																					<li><span style="color:#324047"><span style="font-size:14px"><span
-																									style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Inventory
-																									Management and Equipment Rentals</span></span></span></li>
-																				</ul>
-
-																			</td>
-																		</tr>
-																	</tbody>
-																</table>
-															</td>
-														</tr>
-													</tbody>
-												</table>
-
-
-
-
+												<h2>Share Your Space </h2>
+												</td>
+												</tr>
+										<tr>
+											<td>
+												<p> We give you unlimited locations. Each location can include multiple rooms. You can attach specific equipment to
+													a room or make it available for reservation by adding it to the location’s inventory. Create your location(s), add
+													your rooms, and add available inventory to enable your space for online booking requests.
+												</p>
 											</td>
 										</tr>
-									</tbody>
-								</table>
-								<table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnCaptionBlock">
-									<tbody class="mcnCaptionBlockOuter">
+										</tbody>
+										</table>
+								<table style="margin: 20px;">
+									<tbody>
 										<tr>
-											<td class="mcnCaptionBlockInner" valign="top" style="padding:9px;">
+											<td>
 
+												<h2>Invite Your Community</h2>
+												</td>
+												</tr>
+										<tr>
+											<td>
+												<p>Preview what your members will see by inviting a ‘test’ member at a secondary personal email address. Then invite
+													real members of your health and wellness coworking community to CoWello! After you send an invite, you will be able
+													to track the status and view whether the invitation has been accepted or is still pending.
+												</p>
+											</td>
+											</tr>
+											</tbody>
+											</table>
+								<table style="margin: 20px;">
+									<tbody>
+										<tr>
+											<td>
 
-												<table border="0" cellpadding="0" cellspacing="0" class="mcnCaptionLeftContentOuter"
-													width="100%">
-													<tbody>
-														<tr>
-															<td valign="top" class="mcnCaptionLeftContentInner" style="padding:0 9px ;">
-																<table align="right" border="0" cellpadding="0" cellspacing="0"
-																	class="mcnCaptionLeftImageContentContainer" width="264">
-																	<tbody>
-																		<tr>
-																			<td class="mcnCaptionLeftImageContent" align="center" valign="top">
+												<h2>Get Training and Tips</h2>
+												</td>
+												</tr>
+										<tr>
+											<td>
+												<p>Find tips, tricks, and a step-by-step overview of the platform for both space owners and space members in the
+													CoWello Support Guide.
+												</p>
+											</td>
+										</tr>
+										</tbody>
+										</table>
+								<table style="margin: 20px;">
+									<tbody>
+										<tr>
+											<td>
 
-
-																				<img alt=""
-																					src="https://mcusercontent.com/994f27fb5d69067ff07b3b43d/images/0a3909bc-56a3-0783-65b7-2d5e19bb4ac5.jpg"
-																					width="264" style="max-width:2581px;" class="mcnImage">
-
-
-																			</td>
-																		</tr>
-																	</tbody>
-																</table>
-																<table class="mcnCaptionLeftTextContentContainer" align="left" border="0"
-																	cellpadding="0" cellspacing="0" width="264">
-																	<tbody>
-																		<tr>
-																			<td valign="top" class="mcnTextContent">
-																				<br>
-																				<span style="font-size:18px"><span style="color:#3a7c7c"><span
-																							style="font-family:noticia text,georgia,times new roman,serif">Why
-																							CoWello</span></span></span>
-
-																				<ul>
-																					<li><span style="color:#324047"><span style="font-size:14px"><span
-																									style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Manage
-																									Members and Bookings</span></span></span></li>
-																					<li><span style="color:#324047"><span style="font-size:14px"><span
-																									style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Manage
-																									Clients and Appointments</span></span></span></li>
-																					<li><span style="color:#324047"><span style="font-size:14px"><span
-																									style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Billing
-																									and Invoicing</span></span></span></li>
-																					<li><span style="color:#324047"><span style="font-size:14px"><span
-																									style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Inventory
-																									Management and Equipment Rentals</span></span></span></li>
-																				</ul>
-
-																			</td>
-																		</tr>
-																	</tbody>
-																</table>
-															</td>
-														</tr>
-													</tbody>
-												</table>
-
-
-
-
-
+												<h2>Quick Start Onboarding</h2>
+												</td>
+												</tr>
+												<tr>
+													<td>
+														<p> Your CoWello dashboard is a one stop shop for what’s happening inside your business. At the top of your
+															Dashboard, see the steps you need to complete for your account setup. Visit your Dashboard and complete these
+															quick actions to start getting the most out of your CoWello trial experience.
+														</p>
 											</td>
 										</tr>
 									</tbody>
