--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CoWello Templates</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+  <style>
+    * {
+      font-family: 'Roboto'
+    }
+  
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+  </style>
 </head>
 
 <body>
-  <div>
+  <div class="container">
     <p><a href="Reservation Reminder.html">Reservation Reminder</a></p>
     <p><a href="Newsletter 2.html">Newsletter 2</a></p>
     <p><a href="Verify Email.html">Verify Email</a></p>
