--- a/Welcome - Space Owner.html
+++ b/Welcome - Space Owner.html
@@ -1304,10 +1304,9 @@
 														<tr>
 															<td align="center" valign="middle" class="mcnButtonContent"
 																style="font-family: &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; height: 50px;">
-																<a class="mcnButton " title="Schedule Call" href="{{{scheduleCallLink}}}"
+																<a class="mcnButton " title="Visit My Dashboard" href="https://app.cowello.com"
 																	target="_blank"
-																	style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px;">Schedule
-																	Call</a>
+																	style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF; padding: 0px 18px;">Visit My Dashboard</a>
 															</td>
 														</tr>
 													</tbody>
