--- a/Welcome - Space Owner.html
+++ b/Welcome - Space Owner.html
@@ -1212,6 +1212,22 @@
 										</tr>
 									</tbody>
 								</table>
+								<table style="margin: 20px 20px 0px;">
+									<tbody>
+										<tr>
+											<td>
+												Happy Operating,
+											</td>
+										</tr>
+										<tr>
+								
+								
+											<td>
+												The CoWello Crew
+											</td>
+										</tr>
+									</tbody>
+								</table>
 							</td>
 						</tr>
 						<tr>
